recursion.logo.lessons.recursion.logo.sierpinski.Sierpinski.scala.error
Sierpinski:10: error: identifier expected but ')' found.
    sierpinski(level-1, length/2.)
                                 ^